<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:padding="32dp"
    android:paddingTop="32dp"
    android:paddingBottom="0dp"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/montserrat_semibold"
        android:gravity="center"
        android:text="@string/quotes_title_string"
        android:textColor="#FFF"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_card"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:contentDescription="@string/quote_image_content_desc"
            android:scaleX="-1"
            android:scaleY="-1"
            android:src="@drawable/ic_quote"
            app:tint="#454545" />

        <TextView
            android:id="@+id/quoteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semibold"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/dummy_quote_text_string"
            android:textColor="#454545"
            android:textSize="24sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/quoteAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/montserrat_medium"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:text="@string/dummy_quote_author_string"
            android:textColor="#454545"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/previous_button_text"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_left_arrow"
            app:drawableTint="#80FFFFFF" />

        <TextView
            android:id="@+id/tvNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_arrow"
            android:drawableRight="@drawable/ic_arrow"
            android:gravity="end"
            android:text="@string/next_button_text"
            android:textColor="#80FFFFFF"
            android:textSize="18sp"
            app:drawableRightCompat="@drawable/ic_arrow"
            app:drawableTint="#80FFFFFF"
            tools:ignore="UseCompatTextViewDrawableXml" />


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:clickable="true"
        android:contentDescription="@string/buttonshare_string"
        android:focusable="true"
        android:foregroundTint="#FFF"
        app:backgroundTint="#454545"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:srcCompat="@drawable/ic_share"
        tools:ignore="VectorDrawableCompat"
        tools:targetApi="lollipop" />


</androidx.constraintlayout.widget.ConstraintLayout>